syntax = "proto3";
option go_package = "/pb";
option java_package = "com.services";

import "login.proto";
import "register.proto";
import "otp.proto";
import "contact.proto";
import "message.proto";
import "auth.proto";
// import "hello.proto";
import "user.proto";

message UserRequest{
        string phoneNumber=1;
}
message UserResponse{
        string phoneNumber=1;
        string pubKey=2;
        repeated string blocked_users=3;

}

service Services{
        rpc Login(LoginRequest) returns (LoginResponse) {}
        rpc Register(RegisterRequest) returns (RegisterResponse) {}
        rpc Otp(OtpRequest) returns (AuthResponse) {}
        rpc ValidateContacts(ContactsList) returns (ContactsList) {}
        rpc Send (Event) returns (Event) {}
        rpc messageUpdate(MessageUpdateRequest) returns (MessageUpdateResponse) {}
        rpc VerifyToken(AuthRequest) returns (AuthResponse) {}
        rpc savePubKey(User) returns (User) {}
        rpc handShakeRequest(Event) returns (Event) {}
        rpc getUser(UserRequest) returns (UserResponse) {}
        rpc blockUser(BlockRequest) returns (BlockResponse) {}
        // rpc SayHello (HelloRequest) returns (HelloReply) {}
}